@@ -2,6 +2,11 @@ The PBC pairing-based cryptography library. See COPYING for license.
 
 Ben Lynn
 
+Changes between PBC version 0.4.18 and 0.4.17
+
+* Fix bilinear_map() bug
+* Replace darray with callback in curve finding functions
+
 Changes between PBC version 0.4.17 and 0.4.16
 
 * Handle identity elements in pairings
